fix overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,9 @@ body {
   z-index: 2;
   background-color: rgba(0,0,0,0.4);
 }
-
+html, body {
+  overflow-x: hidden;
+}
 .slides-navigation a.prev,
 .slides-navigation a.next {
   width: 47px;
